--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	 	   <div class="div">
 
 	 	     <h1>Hello i'm Alpha </h1>
-	           <img src="image/IMG_0054.JPG"alt="Alpha">
+	           <img src="image/IMG_0054.jpg"alt="Alpha">
 	             <p>Je suis au 3e tour de coupe de france plus qu'un tour avant les maillots</p>
 	              <a href="https://www.fff.fr/competition/engagement/373170-coupe-de-france/phase/1/index.html?gp_no=2" target="_blank">decouvrer la coupe de france</a>
 	      </div>
